# flowstate

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  LICENSE  NOTICE  README.md  conftest.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.flox/: env.json
.flox/env/: manifest.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/deferred/: v0.7.0-REQUIREMENTS.md
.planning/milestones/: v0.3.0-REQUIREMENTS.md  v0.4.0-REQUIREMENTS.md  v0.5.0-REQUIREMENTS.md  v0.6.0-REQUIREMENTS.md  v0.6.0-ROADMAP.md  v0.6.1-REQUIREMENTS.md  v0.6.1-ROADMAP.md  v0.6.2-REQUIREMENTS.md  v0.8.0-REQUIREMENTS.md  v0.8.0-ROADMAP.md  v0.9.0-REQUIREMENTS.md  v0.9.0-ROADMAP.md
.planning/phases/02-operate-safely/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-ingredients-pack-canon-fixtures/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-PATTERNS.md  03-VERIFICATION.md
.planning/phases/04-integration-layered-cag-assembly-cache-lean-in/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-ux-guided-kickoff-hygiene/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/06-run-journal/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-PATTERNS.md  06-REVIEW-FIX.md  06-REVIEW.md  06-VERIFICATION.md
.planning/phases/07-gotchas-accumulator/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-PATTERNS.md  07-REVIEW-FIX.md  07-REVIEW.md  07-VERIFICATION.md
.planning/phases/08-runnable-verification/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-PATTERNS.md  08-REVIEW-FIX.md  08-REVIEW.md  08-VERIFICATION.md
.planning/phases/09-embedding-provider-vector-store-foundation/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-REVIEW-FIX.md  09-REVIEW.md
.planning/seeds/: SEED-001-harness-tax-and-value.md  SEED-002-harness-e2e.md  SEED-003-sandbox-guardrail.md
bench/: BENCHMARKING_SCOPE.md  BENCHMARK_HANDOFF.md  PAIRED_DESIGN_RUNBOOK.md  SEMANTIC_RETRIEVAL_HANDOFF.md  _retrieval.py  bootstrap.py  capture.py  close_loop.py  compound_eval.py  distiller.py  ground.py  grounding.py  judge.py  locomo.py  locomo_qa.py  longmemeval.py  longmemeval_qa.py  metrics.py  prepare_fixture.py  project.py  replicate.py  report.py  tune_loop.py  verdict.py  wikigen.py
bench/fixtures/: grounding_probes.example.json  instr_baseline.txt  instr_candidate.txt  lme_smoke.json  locomo_smoke.json  rgb_probes.example.json  strategy_scenarios.example.json  sys_strategy_baseline.txt  sys_strategy_candidate.txt
flowstate/: __init__.py  __main__.py  bridge.py  cli.py  config.py  context.py  context_prefix.py  discipline.py  distiller.py  doctor.py  embeddings.py  gotchas.py  gsd_vendor.py  installer.py  interview.py  journal.py  launcher.py  memory.py  memory_handlers.py  orchestrator.py  pack.py  repair.py  sandbox.py  state.py  status_markdown.py  verify.py
flowstate/events/: __init__.py  bus.py  event.py  handler.py  registry.py
flowstate/tools/: __init__.py  autoresearch.py  base.py  gsd_adapter.py  gstack.py  research.py  strategy.py  superpowers.py
scripts/: _dx01_verify.py
tests/: conftest.py  test_bench_bootstrap.py  test_bench_close_loop.py  test_bench_compound.py  test_bench_distiller.py  test_bench_e2e_smoke.py  test_bench_grounding.py  test_bench_judge.py  test_bench_judge_independence.py  test_bench_prepare_fixture.py  test_bench_replicate.py  test_bench_wikigen.py  test_bridge.py  test_cli.py  test_config.py  test_context.py  test_context_prefix.py  test_discipline.py  test_distiller.py  test_doctor.py  test_embeddings.py  test_events.py  test_events_registry.py  test_gotchas.py  test_ground.py  test_gsd_vendor.py  test_install_manifest.py  test_installer.py  test_installer_gsd.py  test_interview.py  test_journal.py  test_launcher.py  test_launcher_skills.py  test_locomo.py  test_locomo_qa.py  test_longmemeval.py  test_longmemeval_qa.py  test_memory.py  test_memory_handlers.py  test_memory_supersession.py  (+17 more)
(+226 files in other folders)
