[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowstate"
version = "0.1.0"
description = "The GrandSlam Orchestrator — unifies Autoresearch, Gstack, GSD, and Superpowers into a single agentic workflow."
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
flowstate = "flowstate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["flowstate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
