[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowstate"
version = "0.1.0"
description = "The GrandSlam Orchestrator — unifies Autoresearch, Gstack, GSD, and Superpowers into a single agentic workflow."
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
flowstate = "flowstate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["flowstate"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=flowstate --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["flowstate"]
omit = ["flowstate/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    # "TCH" disabled — false positives with `from __future__ import annotations`
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["flowstate"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
